# tc39-math

museum/mathlib-2.0.0/: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
museum/mathlib-2.0.0/NT/CL/: DPChange.c  DPChange.h  Makefile.NT.CLdll  Makefile.NT.CLstatic  nt.bat  ultimate.def
museum/mathlib-2.0.0/NT/CL/CVS/: Entries  Repository
museum/mathlib-2.0.0/NT/CVS/: Entries  Repository
museum/mathlib-2.0.0/NT/GCC/: DLL.C  DPChange.c  DPChange.h  Makefile.CYGWIN.static  cyg.bat  ultimate.def
museum/mathlib-2.0.0/NT/GCC/CVS/: Entries  Repository
museum/mathlib-2.0.0/msvc/CVS/: Entries  Repository
museum/mathlib-2.0.0/msvc/mathlib/: mathlib-splash.xcf  mathlib.RES  mathlib.ism  mathlib.ncb  mathlib.rc  mathlib.sln  mathlib.vcproj
museum/mathlib-2.0.0/msvc/mathlib/CVS/: Entries  Repository  Root
museum/mathlib-2.0.0/src/: DPChange.c  DPChange.h  LINUX_DPChange.c  Makefile.am  Makefile.in  endian.h  mathlib_config.h  mathlib_config_msvc.h  mathlib_configuration.h  mathlib_configuration.h.in  ucot.c
